- Reorder request shutdown calls: Call all __destruct() functions and   register_shutdown_function() callbacks before flushing output buffers   and sending headers. - Fixes bug #30578 and possibly others related to output buffering.

# Added some comments too about what happens and where


git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@185347 c90b9560-bf6c-de11-be94-00142212c4b1